--- a/src/Login.css
+++ b/src/Login.css
@@ -1,4 +1,22 @@
+.login-page-outer {
+  width: 100%;
+  height: 580px;
+  position: relative;
+}
+
 .login-content {
+  position: absolute;
+  top: 0;
+  bottom: 0;
   margin: auto;
-  width: 50%;
+  width: 300px;
+  height: 200px;
+  left: 0;
+  right: 0;
+}
+
+.fields {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
 }
